--- a/css/main.css
+++ b/css/main.css
@@ -251,6 +251,163 @@ body, html {
     display: none;
 }
 
+/* SOCIALS */
+
+.socials {
+    background-color: #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 48px;
+}
+
+.socials__title {
+    color: #FFFFFF;
+    font-size: 16px;
+    font-family: assassin-st;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.socials__list {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.socials__link {
+    width: 34px;
+    height: 34px;
+    padding: 0;
+    font-size: 34px;
+    transition: opacity .4s linear;
+}
+
+.socials__link:hover {
+    opacity: .6;
+}
+
+.socials__logo {
+    width: 34px;
+    height: 34px;
+    padding: 0;
+    display: block;
+    margin: 0 0 0 20px;
+}
+
+/* FOOTER */
+
+.footer {
+    background-color: #1D1E22;
+}
+
+.footer__container {
+display: flex;
+justify-content: space-between;
+padding: 40px;
+}
+
+.footer__link {
+    width: 48px;
+    height: 48px;
+    font-size: 48px;
+    padding: 0;
+    transition: opacity .4s linear;
+}
+
+.footer__link:hover {
+    opacity: .6;
+}
+
+.footer__logo {
+    width: 48px;
+    height: 48px;
+    padding: 0;
+    display: block;
+}
+
+.footer__button {
+    border: none;
+    border-radius: 25px;
+    font-size: 24px;
+    line-height: 30px;
+    padding: 0 40px 0 40px;
+    font-weight: 400;
+    background-color: rgba(112, 112, 112, 0.2);
+    color: #FFFFFF;
+    transition: opacity .4s linear;
+    text-transform: uppercase;
+}
+
+.footer__button:hover {
+    opacity: .6;
+}
+
+.footer__region-link {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 0;
+    line-height: 16px;
+    transition: opacity .4s linear;
+}
+
+.footer__globe {
+    display: block;
+    padding: 0;
+    width: 32px;
+    height: 32px;
+}
+
+.footer__region-link:hover {
+    opacity: .6;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.footer__link-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.list__item {
+    margin: 0 0 20px 0;
+}
+
+.list__item:last-of-type {
+    margin: 0;
+}
+
+.list__link {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 16px;
+    text-transform: uppercase;
+    transition: opacity .4s linear;
+}
+
+.list__link:hover {
+    opacity: .6;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.footer__text {
+    color: #FFFFFF;
+    font-size: 12px;
+    padding: 0;
+    margin: 0;
+    max-width: 364px;
+}
+
 /* ANIMATIONS */
 
 @keyframes k-light {
