--- a/css/main.css
+++ b/css/main.css
@@ -1,51 +1,111 @@
 /* USER VARIABLES SECTION */
 
 :root {
-	--accent: #CC8869;
-	--text: #333;
-	--regular-text: 16px;
-	--lineheight: 1.65;
-	--userfont: roboto-st, sans-serif;
-	--systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
+    --accent: #CC8869;
+    --text: #333;
+    --regular-text: 16px;
+    --lineheight: 1.65;
+    --userfont: roboto-st, sans-serif;
+    --systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
     --padding: 120px;
-	--transition: cubic-bezier(.4, 0, 0, 1);
+    --transition: cubic-bezier(.4, 0, 0, 1);
 }
 
 /* BOOTSTRAP SETTINGS SECTION */
 
 /* gutter 20px (10px + 10px). Comment this code for default gutter start at 1.5rem (24px) wide. */
-.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl { --bs-gutter-x: .625rem; }
-.row, .row > * { --bs-gutter-x: 1.25rem; }
+.container,
+.container-fluid,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl,
+.container-xxl {
+    --bs-gutter-x: .625rem;
+}
+
+.row,
+.row>* {
+    --bs-gutter-x: 1.25rem;
+}
 
 /* FONTS LOAD SECTION */
 
-@font-face { src: url("../fonts/roboto-regular-webfont.woff2") format("woff2"); font-family: "roboto-st"; font-weight: 400; font-style: normal; }
-@font-face { src: url("../fonts/roboto-italic-webfont.woff2") format("woff2"); font-family: "roboto-st"; font-weight: 400; font-style: italic; }
-@font-face { src: url("../fonts/roboto-bold-webfont.woff2") format("woff2"); font-family: "roboto-st"; font-weight: 700; font-style: normal; }
-@font-face { src: url("../fonts/roboto-bolditalic-webfont.woff2") format("woff2"); font-family: "roboto-st"; font-weight: 700; font-style: italic; }
-@font-face { src: url("../fonts/assassin.woff2") format("woff2"); font-family: "assassin-st"; font-weight: 700; font-style: italic; }
+@font-face {
+    src: url("../fonts/roboto-regular-webfont.woff2") format("woff2");
+    font-family: "roboto-st";
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    src: url("../fonts/roboto-italic-webfont.woff2") format("woff2");
+    font-family: "roboto-st";
+    font-weight: 400;
+    font-style: italic;
+}
+
+@font-face {
+    src: url("../fonts/roboto-bold-webfont.woff2") format("woff2");
+    font-family: "roboto-st";
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    src: url("../fonts/roboto-bolditalic-webfont.woff2") format("woff2");
+    font-family: "roboto-st";
+    font-weight: 700;
+    font-style: italic;
+}
+
+@font-face {
+    src: url("../fonts/assassin.woff2") format("woff2");
+    font-family: "assassin-st";
+    font-weight: 700;
+    font-style: italic;
+}
 
 /* GENERAL CSS SETTINGS */
 
-::placeholder { color: #666; }
-::selection { background-color: var(--accent); color: #fff; }
-input, textarea { outline: none; }
-input:focus:required:invalid, textarea:focus:required:invalid { border-color: red; }
-input:required:valid, textarea:required:valid { border-color: green; }
+::placeholder {
+    color: #666;
+}
+
+::selection {
+    background-color: var(--accent);
+    color: #fff;
+}
+
+input,
+textarea {
+    outline: none;
+}
+
+input:focus:required:invalid,
+textarea:focus:required:invalid {
+    border-color: red;
+}
+
+input:required:valid,
+textarea:required:valid {
+    border-color: green;
+}
 
 body {
-	font-family: var(--userfont);
-	font-size: var(--regular-text);
-	line-height: var(--lineheight);
-	color: var(--text);
-	min-width: 320px;
-	position: relative;
-	overflow-x: hidden;
+    font-family: var(--userfont);
+    font-size: var(--regular-text);
+    line-height: var(--lineheight);
+    color: var(--text);
+    min-width: 320px;
+    position: relative;
+    overflow-x: hidden;
 }
 
 /* USER STYLES */
 
-body, html {
+body,
+html {
     height: 100%;
 }
 
@@ -164,7 +224,7 @@ body, html {
     transform: scale(.98);
 }
 
-.showcase-carousel__image-wripper > * {
+.showcase-carousel__image-wripper>* {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -213,7 +273,7 @@ body, html {
     left: 0;
 }
 
-.showcase-navigation > * {
+.showcase-navigation>* {
     position: absolute;
     height: 100%;
     width: 50%;
@@ -225,7 +285,7 @@ body, html {
     right: 0;
 }
 
-.showcase-navigation > *::before {
+.showcase-navigation>*::before {
     content: '?';
     font-family: assassin-st;
     opacity: 0;
@@ -237,7 +297,7 @@ body, html {
     font-size: 45px;
 }
 
-.showcase-navigation > *:hover::before {
+.showcase-navigation>*:hover::before {
     opacity: .25;
 }
 
@@ -247,8 +307,280 @@ body, html {
     left: auto;
 }
 
-.showcase-navigation > * .swiper-button-disabled {
+.showcase-navigation>* .swiper-button-disabled {
     display: none;
+}
+
+/* HEADER */
+
+.header {
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: #000000;
+    height: 60px;
+    width: 100%;
+    z-index: 3;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header__link {
+    transition: opacity .4s linear;
+}
+
+.header__link:hover {
+    opacity: .6;
+}
+
+.header__logo {
+    height: 40px;
+    margin: 0 40px 0 40px;
+    display: block;
+    padding: 0;
+    cursor: pointer;
+}
+
+.header__container {
+    min-width: 320px;
+    margin: 0 auto 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+
+    .header__container {
+        max-width: 720px;
+        min-height: 90px;
+    }
+
+}
+
+@media screen and (min-width: 1024px) {
+
+    .header__container {
+        max-width: 928px;
+    }
+
+}
+
+@media screen and (min-width: 1280px) {
+
+    .header__container {
+        max-width: 1184px;
+    }
+
+}
+
+/* MENU */
+
+
+.menu {
+    max-width: 320px;
+}
+
+@media screen and (min-width: 768px) {
+
+    .menu {
+        max-width: 720px;
+    }
+
+}
+
+@media screen and (min-width: 1024px) {
+
+    .menu {
+        max-width: 928px;
+    }
+
+}
+
+@media screen and (min-width: 1280px) {
+
+    .menu {
+        max-width: 1184px;
+    }
+
+}
+
+.menu__container {
+    position: fixed;
+    margin: 0 auto 0 auto;
+    padding: 75px 30px 30px 30px;
+    top: 0;
+    left: -120%;
+    width: 100%;
+    height: 100vh;
+    opacity: .9;
+    -webkit-transition: left .4s ease 0s;
+    -o-transition: left .4s ease 0s;
+    transition: left .4s ease 0s;
+}
+
+@media screen and (min-width: 768px) {
+
+    .menu__container {
+        margin: 0 auto 0 auto;
+        padding: 0;
+        position: relative;
+        left: 0;
+        height: 100%;
+    }
+
+}
+
+.menu__container_active {
+    left: 0;
+}
+
+.menu__icon {
+    position: relative;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 2;
+}
+
+.menu__icon span,
+.menu__icon::before,
+.menu__icon::after {
+    position: absolute;
+    left: 30px;
+    height: 10%;
+    width: 100%;
+    background-color: #FFFFFF;
+    -webkit-transition: all .4s ease 0s;
+    -o-transition: all .4s ease 0s;
+    transition: all .4s ease 0s;
+}
+
+.menu__icon::before,
+.menu__icon::after {
+    content: '';
+}
+
+.menu__icon::before {
+    top: 0;
+}
+
+.menu__icon::after {
+    bottom: 0;
+}
+
+.menu__icon span {
+    top: 50%;
+    -webkit-transform: scale(1) translate(0px, -50%);
+    -ms-transform: scale(1) translate(0px, -50%);
+    transform: scale(1) translate(0px, -50%);
+}
+
+@media screen and (min-width: 768px) {
+
+    .menu__icon {
+        display: none;
+    }
+
+}
+
+.menu__icon_active {}
+
+.menu__icon_active span,
+.menu__icon_active::before,
+.menu__icon_active::after {
+    background-color: #FFFFFF;
+}
+
+.menu__icon_active span {
+    -webkit-transform: scale(0) translate(0px, -50%);
+    -ms-transform: scale(0) translate(0px, -50%);
+    transform: scale(0) translate(0px, -50%);
+}
+
+.menu__icon_active::before {
+    top: 50%;
+    -webkit-transform: rotate(-45deg) translate(0, -50%);
+    -ms-transform: rotate(-45deg) translate(0, -50%);
+    transform: rotate(-45deg) translate(0, -50%);
+}
+
+.menu__icon_active::after {
+    bottom: 50%;
+    -webkit-transform: rotate(45deg) translate(0, 50%);
+    -ms-transform: rotate(45deg) translate(0, 50%);
+    transform: rotate(45deg) translate(0, 50%);
+}
+
+.menu__item {
+    margin: 10px 0 10px 0;
+    font-size: 18px;
+    transition: opacity .4s linear;
+}
+
+@media screen and (min-width: 768px) {
+
+    .menu__item:hover {
+        opacity: .6;
+        text-decoration: none;
+        color: #FFFFFF;
+    }
+
+}
+
+.menu__link {
+    text-decoration: none;
+    color: #FFFFFF;
+    transition: opacity .4s linear;
+}
+
+@media screen and (min-width: 768px) {
+
+    .menu__link {
+        font-size: 18px;
+        font-weight: 600;
+        color: #FFFFFF;
+    }
+
+    .menu__link:hover {
+        opacity: .6;
+        text-decoration: none;
+        color: #FFFFFF;
+    }
+
+}
+
+.menu__list {
+    list-style: none;
+    margin: auto;
+    padding: 0;
+    min-width: 480px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+}
+
+/* PAGE */
+
+.page {
+    display: flex;
+    flex-direction: column;
+}
+
+/* CONTENT */
+
+.content {
+    margin-top: 60px;
 }
 
 /* SOCIALS */
@@ -304,9 +636,9 @@ body, html {
 }
 
 .footer__container {
-display: flex;
-justify-content: space-between;
-padding: 40px;
+    display: flex;
+    justify-content: space-between;
+    padding: 40px;
 }
 
 .footer__link {
