--- a/css/main.css
+++ b/css/main.css
@@ -323,7 +323,6 @@ html {
     z-index: 3;
     display: flex;
     align-items: center;
-    justify-content: space-between;
 }
 
 .header__link {
@@ -343,8 +342,8 @@ html {
 }
 
 .header__container {
-    min-width: 320px;
-    margin: 0 auto 0 auto;
+    margin: auto 80px auto auto;
+
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -361,6 +360,8 @@ html {
     .header__container {
         max-width: 720px;
         min-height: 90px;
+        margin: 0 auto 0 0;
+        min-width: 320px;
     }
 
 }
@@ -559,7 +560,7 @@ html {
 
 .menu__list {
     list-style: none;
-    margin: auto;
+    margin: auto auto auto 0;
     padding: 0;
     min-width: 480px;
     display: -webkit-box;
@@ -602,6 +603,14 @@ html {
     text-align: center;
 }
 
+@media screen and (max-width: 768px) {
+
+    .socials__title {
+        display: none;
+    }
+
+}
+
 .socials__list {
     display: flex;
     list-style: none;
@@ -641,6 +650,14 @@ html {
     padding: 40px;
 }
 
+@media screen and (max-width: 768px) {
+
+    .footer__container {
+align-items: center;
+    }
+
+}
+
 .footer__link {
     width: 48px;
     height: 48px;
@@ -660,6 +677,15 @@ html {
     display: block;
 }
 
+@media screen and (max-width: 768px) {
+
+    .footer__logo {
+        width: 40px;
+        height: 40px;
+    }
+
+}
+
 .footer__button {
     border: none;
     border-radius: 25px;
@@ -671,10 +697,22 @@ html {
     color: #FFFFFF;
     transition: opacity .4s linear;
     text-transform: uppercase;
+    margin: 0 20px 0 20px;
 }
 
 .footer__button:hover {
     opacity: .6;
+}
+
+@media screen and (max-width: 768px) {
+
+    .footer__button {
+        font-size: 14px;
+        line-height: 16px;
+        min-height: 40px;
+        padding: 0 18px 0 18px;
+    }
+
 }
 
 .footer__region-link {
@@ -691,11 +729,29 @@ html {
     transition: opacity .4s linear;
 }
 
+@media screen and (max-width: 768px) {
+
+    .footer__region-link  {
+        font-size: 12px;
+        line-height: 12px;
+    }
+
+}
+
 .footer__globe {
     display: block;
     padding: 0;
     width: 32px;
     height: 32px;
+}
+
+@media screen and (max-width: 768px) {
+
+    .footer__globe  {
+        width: 28px;
+        height: 28px;
+    }
+
 }
 
 .footer__region-link:hover {
@@ -734,10 +790,12 @@ html {
 
 .footer__text {
     color: #FFFFFF;
+    text-wrap: wrap;
     font-size: 12px;
     padding: 0;
     margin: 0;
-    max-width: 364px;
+    margin: 0 auto 40px auto;
+    text-align: center;
 }
 
 /* ANIMATIONS */
